[package]
name = "miuu_replay"
description = "Parse .replay files from the game Marble It Up! Ultra"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["VilleOlof"]
readme = "readme.md"
repository = "https://github.com/VilleOlof/miuu_replay"
homepage = "https://github.com/VilleOlof/miuu_replay"
keywords = ["marbleitup", "parser", "game", "replay"]
categories = ["parsing"]
exclude = ["src/bin/all_replays.rs"]

[dependencies]
thiserror = "2.0.18"
rmp-serde = "1.3.1"
csharp_binary_encoding = "0.4.0"
miniz_oxide = "0.9.0"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
name = "throughput"
harness = false

[profile.release]
lto = true
debug = false

[profile.bench]
lto = true
debug = true
